[package]
name = "sportsbet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-files = "0.4"
actix-session = { version = "=0.6", features = ["cookie-session"] }
actix-files = "0.4"
actix-web = "3.3.2"
async-trait = "*"
chrono = { version = "0.4.9", features = ["serde"] }
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "0.4.1", features = ["postgres"] }
jsonwebtoken = "=7.2"
handlebars = { version = "4.2.1", features = ["dir_source"] }
dotenv = "0.15.0"
r2d2 = "*"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
substring = "1.4"
